plot time class hours

--- a/00_Stats/BoxPlot_AOV_TimeOutSideClass.html
+++ b/00_Stats/BoxPlot_AOV_TimeOutSideClass.html
@@ -9,7 +9,7 @@
 
 
 
-  <meta name="date" content="2024-02-28" />
+  <meta name="date" content="2024-02-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3203,7 +3203,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; }
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2024-02-28</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2024-02-29</p>
           </hgroup>
   </slide>
 
@@ -3273,7 +3273,7 @@ week6 &lt;- c(6, 3, 6, 6, 10, 5, 8, 6, 4, 7, 6, 4, 3, 7, 5, 6, 9, 7)</pre>
 </article></slide><slide class=""><hgroup><h2>t-test: Greater than 6 hours</h2></hgroup><article  id="t-test-greater-than-6-hours">
 
 <pre class = 'prettyprint lang-r'>week2.ttest =t.test(week5, mu=6, alternative=&quot;greater&quot;)
-week3.ttest = t.test(week6, mu=6, alternative=&quot;less&quot; )</pre>
+week3.ttest = t.test(week6, mu=6, alternative=&quot;greater&quot; )</pre>
 
 <pre >## [1] &quot;H1 NULL: Week 5 (!&gt;6): 0.937 (One Sample t-test Greater than mu)&quot;</pre>
 
