--- a/00_Stats/Anscombe.html
+++ b/00_Stats/Anscombe.html
@@ -333,19 +333,20 @@
 <section id="some-dataset-that-beg-the-question" class="slide level2">
 <h2>Some Dataset that “beg the question”</h2>
 </section>
-<section id="bullets" class="slide level2">
-<h2>Bullets</h2>
-<p>When you click the <strong>Render</strong> button a document will be generated that includes:</p>
+<section id="the-problems-of-data-analysis-and-interpretation" class="slide level2">
+<h2>The problems of data analysis and interpretation</h2>
+<p>Looking into <strong>Using Models</strong> might be dangerous</p>
 <ul>
-<li>Content authored with markdown</li>
-<li>Output from executable code</li>
+<li>models are not reality</li>
+<li>models are not the data</li>
+<li>models are not the truth</li>
 </ul>
 </section>
 <section id="anscombe-data" class="slide level2">
 <h2>Anscombe Data</h2>
 </section>
-<section id="results" class="slide level2">
-<h2>Results</h2>
+<section id="results-visualizations" class="slide level2">
+<h2>Results – Visualizations</h2>
 
 <img data-src="Anscombe_files/figure-revealjs/unnamed-chunk-2-1.png" width="960" class="r-stretch"></section>
 <section id="linear-model-coefficents" class="slide level2">
@@ -468,7 +469,11 @@ Multiple R-squared:  0.6667,    Adjusted R-squared:  0.6297
 F-statistic:    18 on 1 and 9 DF,  p-value: 0.002165</code></pre>
 </div>
 </div>
-<div class="footer footer-default">
+</section>
+<section id="plotting-results" class="slide level2">
+<h2>Plotting Results</h2>
+
+<img data-src="Anscombe_files/figure-revealjs/unnamed-chunk-8-1.png" width="960" class="r-stretch"><div class="footer footer-default">
 
 </div>
 </section>
