--- a/04_Stock_and_Flow/stock-and-Flow.html
+++ b/04_Stock_and_Flow/stock-and-Flow.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Marc Los Huertos" />
 
-<meta name="date" content="2025-01-01" />
+<meta name="date" content="2025-01-07" />
 
 <title>Stock and Flow</title>
 
@@ -352,13 +352,185 @@ display: none;
 
 <h1 class="title toc-ignore">Stock and Flow</h1>
 <h4 class="author">Marc Los Huertos</h4>
-<h4 class="date">2025-01-01</h4>
+<h4 class="date">2025-01-07</h4>
 
 </div>
 
 
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
+<pre class="r"><code>library(deSolve) #supports numerical integration using a range of numerical methods
+library(ggplot2) #supports visualization of layered graphics
+library(gridExtra) #supports visualization of multiple plots &amp; graphs
+library(plyr) #supports data frame merging
+library(magrittr) #supports pipe function
+library(grid) #supports additional graphing capability</code></pre>
+<pre class="r"><code># Set time period and step
+START &lt;- 2015
+FINISH &lt;- 2030
+STEP &lt;- 0.25
+simtime &lt;- seq(START, FINISH, by = STEP)
+
+head(simtime);tail(simtime)</code></pre>
+<pre><code>## [1] 2015.00 2015.25 2015.50 2015.75 2016.00 2016.25</code></pre>
+<pre><code>## [1] 2028.75 2029.00 2029.25 2029.50 2029.75 2030.00</code></pre>
+<pre class="r"><code># Set stock capacity, growth and decline rates
+stocks &lt;- c(sCustomers = 10000)
+auxs &lt;- c(aGrowthFraction = 0.08, aDeclineFraction = 0.03)</code></pre>
+<pre class="r"><code># Create the function and returns a list
+model &lt;- function(time, stocks, auxs){
+  with(as.list(c(stocks, auxs)), {
+    fRecruits &lt;- sCustomers * aGrowthFraction
+    fLosses &lt;- sCustomers * aDeclineFraction
+    dC_dt &lt;- fRecruits - fLosses
+    return (list(c(dC_dt),
+                 Recruits = fRecruits, Losses = fLosses,
+                 GF = aGrowthFraction, DF = aDeclineFraction))
+  }) 
+}
+
+# Create the data frame using the `ode` function
+o &lt;- data.frame(ode(y = stocks, times = simtime, func = model,
+                    parms = auxs, method = &quot;euler&quot;))
+
+head(o)</code></pre>
+<pre><code>##      time sCustomers Recruits   Losses   GF   DF
+## 1 2015.00   10000.00 800.0000 300.0000 0.08 0.03
+## 2 2015.25   10125.00 810.0000 303.7500 0.08 0.03
+## 3 2015.50   10251.56 820.1250 307.5469 0.08 0.03
+## 4 2015.75   10379.71 830.3766 311.3912 0.08 0.03
+## 5 2016.00   10509.45 840.7563 315.2836 0.08 0.03
+## 6 2016.25   10640.82 851.2657 319.2246 0.08 0.03</code></pre>
+<pre class="r"><code>summary(o[,-c(1, 5, 6)])</code></pre>
+<pre><code>##    sCustomers       Recruits          Losses     
+##  Min.   :10000   Min.   : 800.0   Min.   :300.0  
+##  1st Qu.:12048   1st Qu.: 963.9   1st Qu.:361.4  
+##  Median :14516   Median :1161.3   Median :435.5  
+##  Mean   :14866   Mean   :1189.3   Mean   :446.0  
+##  3rd Qu.:17489   3rd Qu.:1399.2   3rd Qu.:524.7  
+##  Max.   :21072   Max.   :1685.7   Max.   :632.2</code></pre>
+<p>4 Limits to Growth It is necessary to introduce a formulation method
+before presenting the limits to growth model. Formulation models allows
+developers to create equations robust enough to model the effect of a
+variable on another. They are useful for a wide variety of system
+dynamics models especially those with influencing stocks in different
+systems.</p>
+<p>We begin with modeling causal relationships using effects. This is
+defined as</p>
+<p>Y=Y∗∗Effect(X1onY)∗…∗Effect(XnonY)</p>
+<p>where, based on the assumptions:</p>
+<p>Y = dependent variable of a causal relationship and is a function of
+n independent variables (X1,X2,…,Xn)</p>
+<p>Y∗ = reference value, which is the normal value the variable Y takes
+on. This reference value is multiplied by a sequence of effect functions
+that are calculated based on the normalized ratio of input term (Xi/X∗i)
+where X∗i is the reference input value, and Xi is the actual input
+value.</p>
+<p>The effect function has the normalized ratio (X/X∗) on its x-axis,
+and always contains the point (1, 1). This point (1, 1) is important for
+the following reason: if x equals its reference value X∗ , then the
+effect function will be 1, and therefore y will then equal its reference
+value Y∗ .</p>
+</div>
+<div id="new-version" class="section level2">
+<h2>New Version</h2>
+<pre class="r"><code># Load necessary library
+library(dplyr)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;dplyr&#39;</code></pre>
+<pre><code>## The following objects are masked from &#39;package:plyr&#39;:
+## 
+##     arrange, count, desc, failwith, id, mutate, rename, summarise,
+##     summarize</code></pre>
+<pre><code>## The following object is masked from &#39;package:gridExtra&#39;:
+## 
+##     combine</code></pre>
+<pre><code>## The following objects are masked from &#39;package:stats&#39;:
+## 
+##     filter, lag</code></pre>
+<pre><code>## The following objects are masked from &#39;package:base&#39;:
+## 
+##     intersect, setdiff, setequal, union</code></pre>
+<pre class="r"><code>library(tidyr)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;tidyr&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:magrittr&#39;:
+## 
+##     extract</code></pre>
+<pre class="r"><code># Example dataset: Emissions inventories for USA, China, and India over 10 years
+emissions_data &lt;- data.frame(
+  Year = rep(2015:2024, each = 3), # 10 years
+  Country = rep(c(&quot;USA&quot;, &quot;China&quot;, &quot;India&quot;), times = 10),
+  CO2_emissions = c(
+    runif(10, 4500, 5000), runif(10, 9000, 10000), runif(10, 2200, 2500) # million metric tons
+  ),
+  CH4_emissions = c(
+    runif(10, 250, 300), runif(10, 400, 500), runif(10, 150, 200) # million metric tons
+  ),
+  N2O_emissions = c(
+    runif(10, 100, 120), runif(10, 180, 200), runif(10, 80, 100) # million metric tons
+  )
+)
+
+# Global Warming Potential (GWP) values for 100-year horizon
+GWP_CO2 &lt;- 1
+GWP_CH4 &lt;- 28
+GWP_N2O &lt;- 265
+
+# Calculate yearly GWP-weighted emissions
+emissions_data &lt;- emissions_data %&gt;%
+  mutate(
+    GWP_CO2 = CO2_emissions * GWP_CO2,
+    GWP_CH4 = CH4_emissions * GWP_CH4,
+    GWP_N2O = N2O_emissions * GWP_N2O,
+    Total_GWP = GWP_CO2 + GWP_CH4 + GWP_N2O
+  )
+
+# Stock-and-flow model: Cumulative GWP
+cumulative_emissions &lt;- emissions_data %&gt;%
+  group_by(Country) %&gt;%
+  arrange(Country, Year) %&gt;%
+  mutate(
+    Cumulative_GWP = cumsum(Total_GWP) # Accumulate total GWP over time
+  )
+
+# View cumulative emissions data
+print(cumulative_emissions)</code></pre>
+<pre><code>## # A tibble: 30 × 10
+## # Groups:   Country [3]
+##     Year Country CO2_emissions CH4_emissions N2O_emissions GWP_CO2 GWP_CH4
+##    &lt;int&gt; &lt;chr&gt;           &lt;dbl&gt;         &lt;dbl&gt;         &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;
+##  1  2015 China           4551.          263.         107.    4551.   7358.
+##  2  2016 China           4545.          277.         103.    4545.   7761.
+##  3  2017 China           4784.          291.         112.    4784.   8134.
+##  4  2018 China           9467.          400.         182.    9467.  11213.
+##  5  2019 China           9081.          434.         199.    9081.  12150.
+##  6  2020 China           9227.          403.         187.    9227.  11278.
+##  7  2021 China           9206.          441.         188.    9206.  12359.
+##  8  2022 China           2258.          197.          97.3   2258.   5508.
+##  9  2023 China           2347.          198.          90.3   2347.   5558.
+## 10  2024 China           2211.          199.          89.2   2211.   5558.
+## # ℹ 20 more rows
+## # ℹ 3 more variables: GWP_N2O &lt;dbl&gt;, Total_GWP &lt;dbl&gt;, Cumulative_GWP &lt;dbl&gt;</code></pre>
+<pre class="r"><code># Summarize total GWP and cumulative GWP per country for 10 years
+summary_table &lt;- cumulative_emissions %&gt;%
+  group_by(Country) %&gt;%
+  summarize(
+    Total_10_Years_GWP = sum(Total_GWP),
+    Final_Cumulative_GWP = max(Cumulative_GWP)
+  )
+
+# Print summary results
+print(summary_table)</code></pre>
+<pre><code>## # A tibble: 3 × 3
+##   Country Total_10_Years_GWP Final_Cumulative_GWP
+##   &lt;chr&gt;                &lt;dbl&gt;                &lt;dbl&gt;
+## 1 China              503629.              503629.
+## 2 India              464343.              464343.
+## 3 USA                489846.              489846.</code></pre>
+<pre class="r"><code># Save detailed and summary results to CSV
+write.csv(cumulative_emissions, &quot;cumulative_emissions_gwp_3_countries.csv&quot;, row.names = FALSE)
+write.csv(summary_table, &quot;summary_gwp_3_countries.csv&quot;, row.names = FALSE)</code></pre>
 <p>Stocks and Flows Julio Huato 5/8/2020 1 Introduction</p>
 <p>As in the physical sciences, all basic magnitudes in economics are
 specified either at a point in time or over a period of time. The
